# RPG_wasm-rust_server-rust_client-react

./: .gitignore  package-lock.json  package.json
public/: index.html
r_shared/: Cargo.toml
r_shared/src/: class.rs  error.rs  item.rs  lib.rs  result.rs  status.rs  user.rs
rust/: Cargo.toml
rust/src/: ajax.rs  lib.rs  player.rs  tests.rs  utils.rs
rust/src/logic/: keys.rs
server/: Cargo.toml
server/src/: db.rs  main.rs  mod.rs
server/src/routes/: credential.rs  mod.rs  one_time.rs  response.rs  router.rs  single_use.rs
src/: App.tsx
src/assets/context/: WASM.tsx
src/assets/music/: credit.tsx
src/components/child/: MainButton.tsx  MainTermsAndConditions.tsx
src/components/grandparent/: Home.tsx  Login.tsx  Main.tsx  Player.tsx  Register.tsx
src/components/parent/: MainControls.tsx  MainForm.tsx
src/components/single/: Back.tsx  Experience.tsx  HealthBar.tsx  Player.tsx
src/styles/: index.css
src/styles/child/: MainButton.module.scss  MainTermsAndConditions.module.scss
src/styles/grandparent/: Home.module.scss  Login.module.scss  Player.module.scss  Register.module.scss
src/styles/parent/: MainControls.module.scss  MainForm.module.scss
src/styles/single/: Back.module.scss  Experience.module.scss  HealthBar.module.scss  Player.module.scss
