[package]
name = "r_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
# mongodb = "2.2.1"
lazy_static= "1.4.0"
env_logger = "0.6.0"
futures-util = "0.3.21"
futures = "0.3.21"
serde_json = "1.0.81"
serde_bytes = "0.11.6"
bson = "2.2.0"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"]  }
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "^1.0.59"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "0.8.1", features = ["v4", "stdweb"] }
regex = "1.0.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
