[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"]  }
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.81"
bson = "2.2.0"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "0.8.1", features = ["v4", "stdweb"] }
regex = "1.0.0"
lazy_static= "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dependencies.r_shared]
version = "0.1.0"
path = "../r_shared"


[dev-dependencies]
tokio = { version = "1.18.1", features = ["full"] }